--- a/res/pages/login.fxml
+++ b/res/pages/login.fxml
@@ -41,8 +41,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="600.0" fitWidth="844.0" layoutX="-22.0" layoutY="1.0" opacity="0.52">
          <image>
@@ -56,7 +55,7 @@
          </font>
       </Button>
       <PasswordField layoutX="232.0" layoutY="298.0" prefHeight="39.0" prefWidth="337.0" />
-      <Label layoutX="232.0" layoutY="163.0" prefHeight="39.0" prefWidth="71.0" text="LOGIN:" textFill="#4a433e">
+      <Label layoutX="232.0" layoutY="163.0" prefHeight="39.0" prefWidth="97.0" text="CODICE:" textFill="#4a433e">
          <font>
             <Font name="Verdana Bold" size="17.0" />
          </font>
